objects/Troubleshooting__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Article for troubleshooting how to do something (system or business process)</description>
    <fields>
        <fullName>Admin_Comments__c</fullName>
        <description>Field for admins to enter relevant commentary</description>
        <inlineHelpText>Field for admins to enter relevant commentary</inlineHelpText>
        <label>Admin Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Known_issue__c</fullName>
        <description>Is this issue already known?</description>
        <inlineHelpText>Is this issue already known?</inlineHelpText>
        <label>Known issue?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Problem_attachment__c</fullName>
        <description>Field to attach file demonstrating problem</description>
        <inlineHelpText>Field to attach file demonstrating problem</inlineHelpText>
        <label>Problem attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Problem_links_or_rich_text__c</fullName>
        <description>Field for links or rich text about problem</description>
        <inlineHelpText>Field for links or rich text about problem</inlineHelpText>
        <label>Problem links or rich text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Question_or_Problem__c</fullName>
        <description>Question or problem affecting user</description>
        <inlineHelpText>Question or problem affecting user</inlineHelpText>
        <label>Question or Problem</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <description>Text description of solution</description>
        <inlineHelpText>Text description of solution</inlineHelpText>
        <label>Solution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Solution_attachment__c</fullName>
        <description>Field to attach file demonstrating solution</description>
        <inlineHelpText>Field to attach file demonstrating solution</inlineHelpText>
        <label>Solution attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Solution_links_or_rich_text__c</fullName>
        <description>Field for links or rich text about solution</description>
        <inlineHelpText>Field for links or rich text about solution</inlineHelpText>
        <label>Solution links or rich text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Troubleshooting</label>
    <pluralLabel>Troubleshooting</pluralLabel>
</CustomObject>